<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/restaurants">
        <menu>
            <item
                android:id="@+id/nav_manage_rests"
                android:title="@string/title_activity_manage_restaurants" />
            <item
                android:id="@+id/nav_scan"
                android:title="@string/title_activity_scan" />
            <item
                android:id="@+id/nav_change_account"
                android:title="@string/title_activity_user_settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="Logout" />
            <item
                android:id="@+id/nav_delete"
                android:title="Excluir Usuário" />
        </menu>
    </item>
</menu>
