<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.perozzo.cardapiosapp.ui.AddEditCardActivity"
    tools:showIn="@layout/app_bar_add_edit_cardy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/single_cv"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/single_cb"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/single"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingLeft="8dp"
                        android:text="@string/card_date"
                        android:textColor="@color/bordoMain" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/date_et"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:inputType="datetime" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/repeat_cv"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/repeat_cb"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repeat"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingLeft="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/daysOfWeek"
                        android:textColor="@color/bordoMain" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sun_tv"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:paddingRight="12dp"
                            android:text="@string/sunday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/mon_tv"
                            android:textStyle="bold"
                            android:paddingRight="12dp"
                            android:textSize="16sp"
                            android:text="@string/monday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tue_tv"
                            android:textStyle="bold"
                            android:paddingRight="12dp"
                            android:textSize="16sp"
                            android:paddingBottom="8dp"
                            android:text="@string/tuesday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/wed_tv"
                            android:textStyle="bold"
                            android:paddingRight="12dp"
                            android:textSize="16sp"
                            android:text="@string/wednesday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/thu_tv"
                            android:textStyle="bold"
                            android:paddingRight="12dp"
                            android:textSize="16sp"
                            android:text="@string/thursday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fri_tv"
                            android:textStyle="bold"
                            android:paddingRight="12dp"
                            android:textSize="16sp"
                            android:text="@string/friday"
                            android:background="@android:color/transparent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sat_tv"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:paddingRight="12dp"
                            android:text="@string/saturday"
                            android:background="@android:color/transparent"/>


                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_cv"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/card"
                        android:textColor="@color/bordoMain" />

                    <com.perozzo.cardapiosapp.components.LinedEditText
                        android:id="@+id/foods_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:gravity="top"
                        android:hint="@string/card_msg"
                        android:inputType="textMultiLine"
                        android:minLines="20"
                        android:scrollbars="vertical"
                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
