<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.perozzo.cardapiosapp.ui.UserSignUpActivity"
    tools:showIn="@layout/app_bar_user_login"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"></View>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_weight="0.6"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_et"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/password_et"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></View>

            <TextView
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:padding="8dp"
                android:layout_marginRight="24dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/bordoMain"
                android:text="@string/title_activity_user_login"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
